@@ -4,6 +4,9 @@
 	* infrun.c (handle_inferior_event): Improve reverse stepping
 	through function epilogue.
 
+	* infrun.c (handle_inferior_event): Reverse-next through
+	trampoline.
+
 2009-06-18  Paul Pluzhnikov  <ppluzhnikov@google.com>
 
 	* dwarf2-frame.c (struct comp_unit): Use bfd_size_type for
